src/test/compile-fail/while-expr.rs
// error-pattern: precondition constraint

fn main() {
  let bool x;
  while(x) {
  }
}
